googld ads added to header

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,3 +3,4 @@
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
+<script data-ad-client="ca-pub-3446269249173468" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
