modified ads on footer

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,6 +1,6 @@
 <!-- start custom footer snippets -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- gpages.annajeong.github.io -->
+<!-- footer.annajeong.github.io -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-3446269249173468"
