--- a/_includes/GoogleAdSenseSidebar.html
+++ b/_includes/GoogleAdSenseSidebar.html
@@ -1,5 +1,5 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- sidebar.annajeong.github.io -->
+<!-- GoogleAdSenseSidbar -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-3446269249173468"
